# go/ecommapi/api/handlers/producthandlers.go
@@ -11,6 +11,14 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// GetProducts godoc
+// @Summary Get products for category
+// @Description Get products for a given category starting from a page
+// @Tags product
+// @Produce json
+// @Param X-Session-Token header string true "Session token"
+// @Success 200 {object} map[string]any "Product Items"
+// @Router /products [get]
 func GetProducts(c *gin.Context) {
 	page, err := strconv.Atoi(c.Query("page"))
 	if err != nil {
@@ -45,6 +53,16 @@ func GetProducts(c *gin.Context) {
 	})
 }
 
+// CreateProduct godoc
+// @Summary Create a product
+// @Description Create a product for the given category
+// @Tags product
+// @Accept json
+// @Produce json
+// @Param X-Session-Token header string true "Session token"
+// @Param data body models.ProductDTO true "New Product"
+// @Success 200 {object} map[string]any "Product details"
+// @Router /products [post]
 func CreateProduct(c *gin.Context) {
 	var productDTO models.ProductDTO
 
